--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
         run: npm install
 
       - name: Run Cypress tests
-        run: cypress:all
+        run: npx cypress run
 
       - name: Upload Cypress videos and screenshots
         uses: actions/upload-artifact@v4
